# cidade_ibge_tom

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
cidade_ibge_tom/: __init__.py  cidade.py
tests/: test_cidade.py
